--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,23 +3,24 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_home">
+    app:startDestination="@+id/nav_inventory">
 
     <fragment
-        android:id="@+id/nav_home"
-        android:name="com.stocked.ui.home.HomeFragment"
-        android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" />
-
-    <fragment
-        android:id="@+id/nav_gallery"
+        android:id="@+id/nav_inventory"
         android:name="com.stocked.ui.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
+        android:label="@string/menu_inv"
+        tools:layout="@layout/fragment_inv" />
 
     <fragment
-        android:id="@+id/nav_slideshow"
+        android:id="@+id/nav_scanner"
+        android:name="com.stocked.ui.home.HomeFragment"
+        android:label="@string/menu_scanner"
+        tools:layout="@layout/fragment_scanner" />
+
+
+    <fragment
+        android:id="@+id/nav_status"
         android:name="com.stocked.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
+        android:label="@string/menu_status"
+        tools:layout="@layout/fragment_status" />
 </navigation>
