--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,20 +7,20 @@
 
     <fragment
         android:id="@+id/nav_inventory"
-        android:name="com.stocked.ui.gallery.GalleryFragment"
+        android:name="com.stocked.ui.inventory.InventoryFragment"
         android:label="@string/menu_inv"
         tools:layout="@layout/fragment_inv" />
 
     <fragment
         android:id="@+id/nav_scanner"
-        android:name="com.stocked.ui.home.HomeFragment"
+        android:name="com.stocked.ui.scanner.ScannerFragment"
         android:label="@string/menu_scanner"
         tools:layout="@layout/fragment_scanner" />
 
 
     <fragment
         android:id="@+id/nav_status"
-        android:name="com.stocked.ui.slideshow.SlideshowFragment"
+        android:name="com.stocked.ui.status.StatusFragment"
         android:label="@string/menu_status"
         tools:layout="@layout/fragment_status" />
 </navigation>
