--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -28,6 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
+        android:tooltipText="@string/fab_tooltip"
         app:srcCompat="@drawable/ic_round_edit_24" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
