Edited app colors.

--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -1,9 +1,3 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <gradient
-        android:angle="135"
-        android:centerColor="#1E88E5"
-        android:endColor="#3949AB"
-        android:startColor="#4DB6AC"
-        android:type="linear" />
+    android:shape="rectangle" android:tint="@color/blue_700">
 </shape>
