--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="blue_400">#42A5F5</color>
     <color name="blue_700">#1976D2</color>
     <color name="blue_800">#1565C0</color>
-    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_600">#00ACC1</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
