--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -13,6 +13,10 @@
             android:icon="@drawable/ic_round_qr_code_scanner_24"
             android:title="@string/menu_scanner" />
         <item
+            android:id="@+id/navigation_add"
+            android:icon="@drawable/ic_round_add_circle_outline_24"
+            android:title="@string/menu_add" />
+        <item
             android:id="@+id/nav_status"
             android:icon="@drawable/ic_round_autorenew_24"
             android:title="@string/menu_status" />
