--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/nav_inventory"
-        android:name="com.stocked.ui.inventory.InventoryFragment"
+        android:name="com.stocked.ui.inventory.AddFragment"
         android:label="@string/menu_inv"
         tools:layout="@layout/fragment_inv" />
 
