--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -7,7 +7,7 @@
     tools:context=".ui.inventory.InventoryFragment">
 
     <TextView
-        android:id="@+id/text_inv"
+        android:id="@+id/text_add"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
