--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -13,7 +13,7 @@
             android:icon="@drawable/ic_round_qr_code_scanner_24"
             android:title="@string/menu_scanner" />
         <item
-            android:id="@+id/navigation_add"
+            android:id="@+id/nav_add"
             android:icon="@drawable/ic_round_add_circle_outline_24"
             android:title="@string/menu_add" />
         <item
