--- a/app/src/main/res/layout/fragment_status.xml
+++ b/app/src/main/res/layout/fragment_status.xml
@@ -18,31 +18,32 @@
             android:layout_marginTop="10dp"
 
             android:layout_marginEnd="10dp"
-            app:cardBackgroundColor="#999999"
+            app:cardBackgroundColor="#e4e4e4"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
             <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="25dp"
-                android:layout_margin="10dp"
-
+                android:layout_height="50dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
                 android:text="@string/server_ip"></TextView>
 
             <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="25dp"
+                android:layout_height="50dp"
                 android:layout_marginLeft="10dp"
-                android:layout_marginTop="45dp"
+                android:layout_marginTop="60dp"
                 android:layout_marginBottom="10dp"
+
 
                 android:text="@string/server_port"></TextView>
 
             <EditText
                 android:id="@+id/editTextServerIP"
                 android:layout_width="150dp"
-                android:layout_height="25dp"
+                android:layout_height="50dp"
                 android:layout_marginLeft="120dp"
                 android:layout_marginTop="10dp"
                 android:ems="10"
@@ -52,9 +53,9 @@
             <EditText
                 android:id="@+id/editTextServerPort"
                 android:layout_width="150dp"
-                android:layout_height="25dp"
+                android:layout_height="50dp"
                 android:layout_marginLeft="120dp"
-                android:layout_marginTop="45dp"
+                android:layout_marginTop="60dp"
                 android:ems="10"
                 android:inputType="textPersonName"
                 android:text="Server IP" />
@@ -64,7 +65,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="70dp"
+                android:layout_marginTop="120dp"
                 android:layout_marginBottom="10dp"
                 android:text="Connect" />
 
