Edited secondary details.

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,10 +6,12 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_inventory"
+            android:enabled="true"
             android:icon="@drawable/ic_round_folder_open_24"
             android:title="@string/menu_inv" />
         <item
             android:id="@+id/nav_scanner"
+            android:enabled="true"
             android:icon="@drawable/ic_round_qr_code_scanner_24"
             android:title="@string/menu_scanner" />
         <item
