--- a/app/src/main/res/layout/fragment_status.xml
+++ b/app/src/main/res/layout/fragment_status.xml
@@ -10,68 +10,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cardView"
-            android:layout_width="match_parent"
+        <Button
+            android:id="@+id/btnCheck"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
-
-            android:layout_marginEnd="10dp"
-            app:cardBackgroundColor="#e4e4e4"
+            android:layout_gravity="center_horizontal"
+            android:text="Check"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="50dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="30dp"
-                android:text="@string/server_ip"></TextView>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="50dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="80dp"
-                android:layout_marginBottom="10dp"
-
-
-
-                android:text="@string/server_port"></TextView>
-
-            <EditText
-                android:id="@+id/editTextServerIP"
-                android:layout_width="150dp"
-                android:layout_height="50dp"
-                android:layout_marginLeft="120dp"
-                android:layout_marginTop="10dp"
-
-                android:ems="10"
-                android:hint="Server IP"
-                android:inputType="textPersonName" />
-
-            <EditText
-                android:id="@+id/editTextServerPort"
-                android:layout_width="150dp"
-                android:layout_height="50dp"
-                android:layout_marginLeft="120dp"
-                android:layout_marginTop="60dp"
-                android:ems="10"
-                android:hint="Server Port"
-                android:inputType="number" />
-
-            <Button
-                android:id="@+id/buttonConnect"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="120dp"
-                android:layout_marginBottom="10dp"
-                android:text="Connect" />
-
-        </androidx.cardview.widget.CardView>
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
