--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,15 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_status">
-
-    <fragment
-        android:id="@+id/nav_inventory"
-        android:name="com.stocked.ui.inventory.InventoryFragment"
-        android:label="@string/menu_inv"
-        tools:layout="@layout/fragment_inv"
-
-        />
+    app:startDestination="@+id/nav_add">
 
     <fragment
         android:id="@+id/nav_scanner"
