--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -6,69 +6,90 @@
     android:layout_height="match_parent"
     tools:context=".ui.add.AddFragment">
 
-    <TextView
-        android:id="@+id/text_add"
-        android:layout_width="395dp"
-        android:layout_height="47dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:text="Aggiungi un prodotto"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.084" />
-
     <Button
         android:id="@+id/btnAdd"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="148dp"
-        android:text="Aggiungi"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="64dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/round_bg"
+        android:fontFamily="@font/montserrat"
+        android:text="@string/menu_add"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/dttProductQuantity" />
 
     <EditText
         android:id="@+id/dttCode"
-        android:layout_width="380dp"
+        android:layout_width="0dp"
         android:layout_height="45dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="44dp"
-        android:layout_marginEnd="15dp"
+        android:layout_marginTop="64dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/round_border"
+        android:drawableStart="@drawable/ic_round_inventory_24"
+        android:drawablePadding="6dp"
+        android:drawableTint="@color/blue_400"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Codice"
+        android:fontFamily="@font/montserrat"
+        android:hint="@string/prd_code"
+        android:inputType="number"
+        android:padding="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_add" />
+        app:layout_constraintTop_toBottomOf="@+id/imgAdd" />
 
     <EditText
         android:id="@+id/dttProductName"
-        android:layout_width="380dp"
+        android:layout_width="0dp"
         android:layout_height="45dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/round_border"
+        android:drawableStart="@drawable/ic_round_text_fields_24"
+        android:drawablePadding="6dp"
+        android:drawableTint="@color/blue_400"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Nome prodotto"
+        android:fontFamily="@font/montserrat"
+        android:hint="@string/prd_name"
+        android:padding="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/dttCode" />
 
     <EditText
         android:id="@+id/dttProductQuantity"
-        android:layout_width="380dp"
+        android:layout_width="0dp"
         android:layout_height="45dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/round_border"
+        android:drawableStart="@drawable/ic_round_quantity_24"
+        android:drawablePadding="6dp"
+        android:drawableTint="@color/blue_400"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Quantità"
+        android:fontFamily="@font/montserrat"
+        android:hint="@string/prd_quantity"
+        android:inputType="number"
+        android:padding="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/dttProductName" />
+
+    <View
+        android:id="@+id/imgAdd"
+        android:layout_width="160dp"
+        android:layout_height="160dp"
+        android:layout_marginTop="64dp"
+        android:background="@drawable/ic_round_add_circle_outline_24"
+        android:backgroundTint="@color/blue_400"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
