--- a/app/src/main/res/layout/fragment_scanner.xml
+++ b/app/src/main/res/layout/fragment_scanner.xml
@@ -12,79 +12,87 @@
 
         <TextView
             android:id="@+id/txtCode"
-            android:layout_width="350dp"
+            android:layout_width="0dp"
             android:layout_height="30dp"
-            android:fontFamily="monospace"
+            android:layout_marginTop="64dp"
+            android:fontFamily="@font/montserrat"
             android:maxLines="1"
-            android:text="Code"
+            android:text="@string/prd_code"
             android:textAlignment="center"
-            android:textSize="20sp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.12" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/txtProductName"
-            android:layout_width="350dp"
+            android:layout_width="0dp"
             android:layout_height="30dp"
-            android:layout_marginStart="30dp"
-            android:layout_marginTop="25dp"
-            android:layout_marginEnd="30dp"
-            android:layout_marginBottom="562dp"
-            android:text="Nome prodotto"
-            android:textAlignment="textStart"
+            android:layout_marginTop="32dp"
+            android:fontFamily="@font/montserrat"
+            android:text="@string/prd_name"
+            android:textAlignment="center"
             android:textSize="18sp"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txtCode" />
 
         <TextView
             android:id="@+id/txtAvailableProducts"
-            android:layout_width="150dp"
+            android:layout_width="0dp"
             android:layout_height="30dp"
-            android:layout_marginStart="30dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="230dp"
+            android:layout_marginTop="8dp"
+            android:fontFamily="@font/montserrat"
             android:text="TextView"
+            android:textAlignment="center"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txtProductName" />
 
         <EditText
             android:id="@+id/dttAmount"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="16dp"
+            android:background="@drawable/round_border"
+            android:drawableStart="@drawable/ic_round_quantity_24"
+            android:drawablePadding="6dp"
+            android:drawableTint="@color/blue_400"
             android:ems="10"
+            android:fontFamily="@font/montserrat"
+            android:hint="@string/prd_quantity"
             android:inputType="number"
+            android:padding="8dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.154"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/rdgRadioButton" />
 
         <Button
             android:id="@+id/btnSend"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="36dp"
-            android:text="Invia"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="65dp"
+            android:layout_marginEnd="16dp"
+            android:background="@drawable/round_bg"
+            android:fontFamily="@font/montserrat"
+            android:text="@string/send"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.095"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/dttAmount" />
 
         <RadioGroup
             android:id="@+id/rdgRadioButton"
-            android:layout_width="182dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="16dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.135"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txtAvailableProducts">
 
@@ -92,13 +100,15 @@
                 android:id="@+id/rdbAdd"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Aggiungi" />
+                android:fontFamily="@font/montserrat"
+                android:text="@string/prd_add" />
 
             <RadioButton
                 android:id="@+id/rdbRemove"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Rimuovi" />
+                android:fontFamily="@font/montserrat"
+                android:text="@string/prd_remove" />
         </RadioGroup>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
